Gemaakt met Colaboratory

--- a/Shark_Attack.ipynb
+++ b/Shark_Attack.ipynb
@@ -8,9 +8,10 @@
         "2DnypKNrPeeJ",
         "f3HOs_Fdecf1",
         "femELduzZlQP",
-        "joOzgeE16IW7"
+        "joOzgeE16IW7",
+        "yaNeMYpVXnmW"
       ],
-      "authorship_tag": "ABX9TyPR6RhdfsxS4037EevQnmpu",
+      "authorship_tag": "ABX9TyOrtOJpKPAzmZh6EnxAcuow",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,6 +94,7 @@
         "import io\n",
         "import requests\n",
         "%reload_ext google.colab.data_table\n",
+        "%run script.py\n",
         "\n",
         "# import csv\n",
         "df = pd.read_csv('https://raw.githubusercontent.com/eevee90/SharkAttack/main/attacks.csv', encoding='latin1')\n",
